--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "prod": "webpack"
+    "prod": "npm run clean && NODE_ENV=production webpack -p",
+    "clean": "rimraf ./dist/*"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.5",
     "html-webpack-plugin": "^2.30.1",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
