--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.2.0",
     "node-sass": "^4.5.3",
+    "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
