--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "imports-loader": "^0.7.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
