--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "bootstrap": "^4.0.0-beta",
-    "bootstrap-loader": "^2.2.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.5",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "bootstrap-loader": "^2.2.0",
     "jquery": "^3.2.1"
   }
 }
