--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
-    "bootstrap": "^4.0.0-beta",
-    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.5",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -24,6 +22,7 @@
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.2.0",
     "imports-loader": "^0.7.1",
+    "materialize-loader": "^2.0.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "purify-css": "^1.2.5",
@@ -37,7 +36,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "bootstrap-loader": "^2.2.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "materialize-css": "^0.100.2"
   }
 }
