--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.2.0",
     "imports-loader": "^0.7.1",
+    "materialize-css": "^0.100.2",
     "materialize-loader": "^2.0.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
@@ -36,7 +37,6 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "jquery": "^3.2.1",
-    "materialize-css": "^0.100.2"
+    "jquery": "^3.2.1"
   }
 }
