--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "blowserslist": [
+    "ie > 9"
+  ],
   "scripts": {
     "dev": "webpack-dev-server",
-    "prod": "npm run clean && NODE_ENV=production webpack -p",
+    "prod": "npm run clean && cross-env NODE_ENV=production webpack -p",
     "clean": "rimraf ./dist/*"
   },
   "keywords": [],
@@ -15,6 +18,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "compression-webpack-plugin": "^1.0.0",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -25,6 +30,8 @@
     "materialize-css": "^0.100.2",
     "materialize-loader": "^2.0.1",
     "node-sass": "^4.5.3",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
